# wow

./: .gitignore  .replit  README.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  vite.config.ts
attached_assets/: zoo_model_1762023720806.py
backend/: SETUP_DATABASE.sql  auto_setup.py  database_schema.sql  requirements.txt  run.py  setup_database.py  setup_db_via_api.py
backend/app/: __init__.py  database.py  main.py
backend/app/models/: __init__.py  schemas.py  zoo_model.py
backend/app/routes/: animals.py  auth.py  observations.py  users.py
src/: App.tsx
src/components/: AdminDashboard.tsx  AnimalCard.tsx  AnimalProfile.tsx  DailyLogEntry.tsx  LandingPage.tsx  LogHistory.tsx  LoginScreen.tsx  OfficerDashboard.tsx  SOSModal.tsx  SettingsScreen.tsx  TaskWidget.tsx  UserManagement.tsx  VetDashboard.tsx  ZookeeperDashboard.tsx  mockData.ts
src/i18n/: translations.ts
src/services/: api.ts
src/styles/: globals.css
